--- a/public/index.html
+++ b/public/index.html
@@ -32,7 +32,7 @@
       crossorigin="anonymous"
     />
 
-    <title>August</title>
+    <title>August's Portfolio</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
